--- a/index.html
+++ b/index.html
@@ -28,9 +28,16 @@
     <!-- Main -->
     <main>
 
-        <h1 id="mio_id"></h1>
+        <div class="container">
 
+            <div class="row d-flex justify-content-center">
 
+                <div class="col-10 mt-4">
+                    
+                    <h1 id="mio_id">Prova</h1>
+                </div>
+            </div>
+        </div>
     </main>
 
     <!-- Footer -->
